--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
                 <footer class="bg-white p-4 text-center text-sm text-gray-500 border-t">
                     <p>&copy; {% now "Y" %} Kantor Kementerian Agama Kabupaten Pohuwato. All Rights Reserved.</p>
                     <!-- PENAMBAHAN: Baris untuk pembuat aplikasi -->
-                    <p class="mt-1 text-xs">===RN===</p>
+                    <p class="mt-1 text-xs">✮⋆˙ RN ✮⋆˙</p>
                 </footer>
                 <!-- ======================================================= -->
 
