--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 <!-- Tulisan Berjalan Atas -->
 <div class="w-full bg-yellow-200 text-yellow-900 py-2 px-4 text-sm font-semibold whitespace-nowrap overflow-hidden relative shadow-md z-50">
     <div class="animate-marquee">
-        Informasi: Pengajuan cuti paling lambat dilakukan 7 hari sebelum tanggal cuti. Hubungi admin jika mengalami kendala login.
+        INFORMASI: PENGAJUAN CUTI PALING LAMBAT DILAKUKAN 3 HARI SEBELUM TANGGAL CUTI. GANTI PASSWORD ANDA SETELAH LOGIN DIBAGIAN PROFILE.
     </div>
 </div>
 
